--- a/app/globals.css
+++ b/app/globals.css
@@ -7,7 +7,7 @@ body {
 }
 
 .red-gradient {
-  background: linear-gradient(92deg, #ff5956 2.87%, #ee1e38 96.18%);
+  background: linear-gradient(92deg, #ffee56 2.87%, #ee1e28 96.18%);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
